--- a/googleui/www/index.html
+++ b/googleui/www/index.html
@@ -19,7 +19,8 @@
             </div>
             <img class="logo" src="img/Logo.png">
         </header>
-        <button id="button">Sign in</button>
+        <button id="button1">Button</button>
+        <button id="button2">Button</button>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
     </body>
