--- a/googleui/www/index.html
+++ b/googleui/www/index.html
@@ -12,15 +12,26 @@
     </head>
     <body>
         <header>
-            <div class="hamburger">
+            <div id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
             <img class="logo" src="img/Logo.png">
         </header>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="#">Theme</a>
+            <a href="#">Color</a>
+            <a href="#">Inputs</a>
+        </div>
+        <div id="overlay"></div>
         <button id="button1">Button</button>
         <button id="button2">Button</button>
+        <footer class="footer">
+            <button id="home">Home</button>
+            <button id="more">More</button>
+        </footer>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
     </body>
