--- a/googleui/www/index.html
+++ b/googleui/www/index.html
@@ -20,17 +20,17 @@
             <img class="logo" src="img/Logo.png">
         </header>
         <div id="menu">
-            <a href="index.html">Home</a>
-            <a href="#">Theme</a>
-            <a href="#">Color</a>
-            <a href="#">Inputs</a>
+            <a class="navlnk" href="index.html">Home</a>
+            <a class="navlnk" href="#">Theme</a>
+            <a class="navlnk" href="#">Color</a>
+            <a class="navlnk" href="#">Inputs</a>
         </div>
         <div id="overlay"></div>
         <button id="button1">Button</button>
         <button id="button2">Button</button>
-        <footer class="footer">
-            <button id="home">Home</button>
-            <button id="more">More</button>
+        <footer>
+            <button id="home" class="nav">&#xE80F;</button>
+            <button id="more" class="nav">&#xE712;</button>
         </footer>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
